# lab01_mlops

./: .env.dev  .env.prod  .env.test  .pre-commit-config.yaml  .sops.yaml  README.md  app.py  inference.py  main.py  model.joblib  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
tests/: test_app.py  test_settings.py
